/*
 * Kbempgo Stor API
 */

syntax = "proto3";

package kb.v1;
option go_package = "github.com/mioxin/kbempgo/api/kbemp/v1;kbv1";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
// import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
// import "patch/go.proto";

// Stor service provides an interface to storage for kbemp data.
service StorAPI {
  // GetDep returns department data
  rpc GetDepsBy(DepRequest) returns (DepsResponse) {
    option (google.api.http) = {
      get : "/api/stor/v1/dep/{field}/{str}"
    };
  }

  // GetSotr returns employee data by field
  rpc GetSotrsBy(SotrRequest) returns (SotrsResponse) {
    option (google.api.http) = {
      get : "/api/stor/v1/employee/{field}/{str}"
    };
  }

  // Flush data
  // nolint:RPC_REQUEST_RESPONSE_UNIQUE
  rpc Flush(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/api/stor/v1/flush"
      body : "*"
    };
  }

  // Save updates Dep data
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  rpc Save(Item) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/api/stor/v1/save"
      body : "*"
      additional_bindings {
        put : "/api/stor/v1/save"
        body : "*"
      }
    };
  }

  // Update sotr if it exists by tabnum field
  // nolint:RPC_REQUEST_RESPONSE_UNIQUE
  rpc Update(UpdateSotrRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
        patch : "/api/stor/v1/save"
        body : "*"
      };
  }

  // Get sotr history
  rpc GetHistory(HistRequest) returns (HistoryListResponse) {
    option (google.api.http) = {
      get : "/api/stor/v1/history/{sotr_id}"
    };
  }

}

message Dep {
  uint64 id = 1;
  string idr = 2;
  string parent = 3;
  string text = 4;
  bool children = 5;
}

message DepsResponse {
  repeated Dep deps = 1;
}

message DepRequest { 
  enum DBField {
    NONE = 0;
    IDR = 1;
    PARENT = 4;
  }
  string str = 1;
  DBField field = 2;
}

message SotrRequest { 
  enum DBField {
    NONE = 0;
    MOBILE = 1;
    FIO = 2;
    TABNUM = 3;
    IDR = 4;
  }
  string str = 1;
  DBField field = 2;
}

message HistRequest { 
  string sotr_id = 1;
}


message Sotr {
  uint64 id = 1 ;
  string idr = 2;
  string tabnum = 3;
  string name = 4;
  string mid_name = 5;
  repeated string phone = 6;
  repeated string mobile = 7;
  string email = 8 [ (validate.rules).string = {email: true, ignore_empty: true} ];
  string avatar = 9;
  string grade = 10;
  bool children = 11;
  string parent_id = 12;
  // repeated History hist = 13[ json_name = "history" ];
  google.protobuf.Timestamp date = 14;
}

message History {
  google.protobuf.Timestamp date = 1;
  string field = 2;
  string old_value = 3;
  uint64 sotr_id = 4  [ json_name = "sotr_uid" ];
}

message SotrsResponse {
  repeated Sotr sotrs = 1;
}

message Item {
  oneof var {
    Dep dep = 1;
    Sotr sotr = 2;
  }
}

message HistoryListResponse {
  repeated History history_list = 1;
}

message UpdateSotrRequest {
  Sotr sotr = 1;
  repeated History history_list = 2;
}